fixed slight GUI inconsistencies regarding the milling style removed a shadow from an auxiliary GUI element
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@839 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/gtk-interface/pycam-project.ui
+++ b/share/gtk-interface/pycam-project.ui
@@ -6390,6 +6390,7 @@ The default port is 1250.</property>
                                               <object class="GtkViewport" id="viewport1">
                                                 <property name="visible">True</property>
                                                 <property name="resize_mode">queue</property>
+                                                <property name="shadow_type">none</property>
                                                 <child>
                                                   <placeholder/>
                                                 </child>
