reverted move directions for OpenGL view (more intuitive) replace "Reset" with "Center" in OpenGL view
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@854 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -4527,7 +4527,7 @@ upon interesting bugs and weird results.</property>
             <child>
               <object class="GtkToolButton" id="Reset View">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Reset</property>
+                <property name="label" translatable="yes">Center</property>
                 <property name="use_underline">True</property>
               </object>
               <packing>
